// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/language should render correctly 1`] = `
<span
  className="m-language foo"
  itemScope={true}
  itemType="https://schema.org/ItemList"
  role="list"
>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo1
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="1"
            data-text="bar1"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-hidden"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask is-rotated-176"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo1"
        itemProp="name"
      />
    </div>
  </li>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo2
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="20"
            data-text="bar2"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-hidden"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask is-rotated-108"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo2"
        itemProp="name"
      />
    </div>
  </li>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo3
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="80"
            data-text="bar3"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-rotated-72"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo3"
        itemProp="name"
      />
    </div>
  </li>
  Module language children
</span>
`;

exports[`common/component/module/language should render no itemType if unset 1`] = `
<span
  className="m-language foo"
  role="list"
>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo1
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="1"
            data-text="bar1"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-hidden"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask is-rotated-176"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo1"
        itemProp="name"
      />
    </div>
  </li>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo2
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="20"
            data-text="bar2"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-hidden"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask is-rotated-108"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo2"
        itemProp="name"
      />
    </div>
  </li>
  <li
    className="l-grid__col--4"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/Language"
    role="listitem"
  >
    <div
      className="c-box"
    >
      <h3
        className="is-centered c-type--h3 c-box__header"
      >
        foo3
      </h3>
      <div
        className="c-box__content"
      >
        <div
          className="c-pie"
        >
          <div
            className="c-pie__circle"
            data-percent="80"
            data-text="bar3"
          >
            <div
              className="c-pie__left"
            >
              <span
                className="c-pie__mask is-rotated-72"
              />
            </div>
            <div
              className="c-pie__right"
            >
              <span
                className="c-pie__mask"
              />
            </div>
          </div>
        </div>
      </div>
      <meta
        content="foo3"
        itemProp="name"
      />
    </div>
  </li>
  Module language children
</span>
`;

exports[`common/component/module/language should return null if no content image is empty 1`] = `null`;
